# 2025_sejong_sw_hackerton-dormitory

./: .env  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  main.py  mate_match.py  pyproject.toml  random_csv_generator.py  roommate_faker_data_v2.csv  roommate_faker_data_v4.csv  students.csv  students_ready.csv
alembic/: env.py
alembic/versions/: 2a1d945bd07c_change_student_table_sleep_time_format.py  df6e5b6ab90e_initial_student_table.py  e600883d0964_change_room_id_to_integer_and_add_.py  e89c93a28ba6_change_student_table_sleep_time_format.py
app/core/: config.py  database.py  dependencies.py
app/exceptions/: matching.py  student.py
app/ml/: __init__.py  clustering.py  matching.py  scoring.py
app/models/: student.py
app/repositories/: matching_repository.py  student.py
app/routers/: api.py  matching.py  student.py
app/schemas/: common.py  matching.py  student.py
app/services/: matching_service.py  student.py
