[project]
name = "sejong-hackerton"
version = "0.1.0"
description = "Dormitory Roommate Matching System Backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.127.0",
    "uvicorn[standard]>=0.40.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "pytest-cov>=4.1.0",
]
